@@ -9,6 +9,10 @@
       <config db="MsSqlServer2005" csn="MyConnectionStringName"/>
     </activerecord>
   to get default configurations for different DBs (Sql Server, SQLite, Oracle, MySql and others)
+- Added defaults for PrimaryKeyType unless specified explicitly:
+    guid.comb for guids
+    assigned for strings
+    native otherwise
 
 - Bugs fixed:
   AR-ISSUE-271
